<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <import type="java.util.List" />

        <import type="com.jlroberts.flixat.domain.model.WatchProvider" />

        <variable
            name="viewModel"
            type="com.jlroberts.flixat.ui.detail.DetailViewModel" />

        <variable
            name="movie"
            type="com.jlroberts.flixat.domain.model.DetailMovie" />

        <variable
            name="watchProviders"
            type="List&lt;WatchProvider&gt;" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/retry_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="@{viewModel.state.error ? View.VISIBLE : View.GONE}"
            android:orientation="vertical"
            android:gravity="center">

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/no_network"
                android:layout_width="300dp"
                android:layout_height="300dp"
                app:lottie_rawRes="@raw/network_lottie"
                android:layout_above="@id/retry_button"
                app:lottie_autoPlay="true"
                app:lottie_loop="true" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="No internet connection, please retry."
                android:textAppearance="@style/TextAppearance.Material3.TitleMedium" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/retry_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginTop="32dp"
                android:text="Retry" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/loading"
            android:layout_width="300dp"
            android:layout_height="300dp"
            app:lottie_rawRes="@raw/loading"
            android:visibility="@{viewModel.state.loading ? View.VISIBLE : View.GONE}"
            android:layout_centerInParent="true"
            app:lottie_autoPlay="true"
            app:lottie_loop="true" />

        <ScrollView
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fitsSystemWindows="true">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/backdrop"
                    android:layout_width="match_parent"
                    android:layout_height="325dp"
                    android:scaleType="centerCrop"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <RelativeLayout
                    android:id="@+id/backdrop_scrim"
                    android:layout_width="match_parent"
                    android:layout_height="325dp"
                    android:background="@drawable/gradient"
                    android:visibility="invisible"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/back_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="48dp"
                    android:contentDescription="@string/detail_back_content_description"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_baseline_arrow_back_24"
                    app:tint="@color/md_theme_dark_onSurface" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/movie_image"
                    android:layout_width="120dp"
                    android:layout_height="200dp"
                    android:layout_marginStart="16dp"
                    android:contentDescription="@string/detail_movie_image_content_description"
                    android:scaleType="centerCrop"
                    app:layout_constraintBottom_toBottomOf="@id/backdrop"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/backdrop"
                    app:movieImage="@{movie.posterPath.large}" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/title_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="8dp"
                    android:ellipsize="end"
                    android:maxLines="3"
                    android:text="@{movie.title}"
                    android:textAppearance="@style/TextAppearance.Material3.HeadlineMedium"
                    android:textColor="@color/md_theme_dark_onSurface"
                    app:layout_constraintBottom_toBottomOf="@+id/backdrop"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0"
                    app:layout_constraintStart_toEndOf="@id/movie_image"
                    app:layout_constraintTop_toBottomOf="@id/backdrop"
                    app:layout_constraintTop_toTopOf="@+id/movie_image"
                    app:layout_constraintVertical_bias="1.0"
                    app:layout_constraintVertical_weight="@id/backdrop" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tagline"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:text="@{movie.tagline}"
                    android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/movie_image"
                    app:layout_constraintTop_toBottomOf="@+id/backdrop" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/release_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:visibility="@{movie.releaseDate != null ? View.VISIBLE : View.INVISIBLE}"
                    app:date='@{movie.releaseDate}'
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0"
                    app:layout_constraintStart_toEndOf="@id/movie_image"
                    app:layout_constraintTop_toBottomOf="@id/tagline"
                    tools:text="1009" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text='@{movie.runtime != null ? @string/runtime_format(movie.runtime) : ""}'
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0"
                    app:layout_constraintStart_toEndOf="@id/release_date"
                    app:layout_constraintTop_toBottomOf="@id/tagline"
                    tools:text="120 min" />

                <HorizontalScrollView
                    android:id="@+id/chipGroupLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scrollbars="none"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/movie_image">

                    <com.google.android.material.chip.ChipGroup
                        android:id="@+id/chip_group"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:paddingEnd="24dp"
                        app:chipData="@{movie.genres}"
                        app:singleLine="true" />
                </HorizontalScrollView>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/cast_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/detail_cast_label"
                    android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
                    android:visibility="@{movie.credits != null ? View.VISIBLE : View.GONE}"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/chipGroupLayout" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/cast_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:clipToPadding="false"
                    android:nestedScrollingEnabled="false"
                    android:orientation="horizontal"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    app:castData="@{movie.credits}"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/cast_label" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/trailer_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="48dp"
                    android:layout_marginRight="48dp"
                    app:trailerKey="@{viewModel.state.trailerKey}"
                    android:text="@string/detail_view_trailer_btn_text"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/cast_recycler" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/overview_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="32dp"
                    android:text="@string/detail_overview_label"
                    android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
                    android:visibility="@{movie.overview != null ? View.VISIBLE : View.GONE}"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/trailer_button" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/overview_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:text="@{movie.overview}"
                    android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/overview_label" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/similar_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="32dp"
                    android:text="@string/similar_label"
                    android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
                    android:visibility="@{movie.similar.size() == 0 ? View.GONE : View.VISIBLE}"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/overview_text" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_similar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:clipToPadding="false"
                    android:nestedScrollingEnabled="false"
                    android:orientation="horizontal"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/similar_label"
                    app:similarData="@{movie.similar}" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/provider_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="32dp"
                    android:text="@string/detail_watch_providers_label"
                    android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
                    android:visibility="@{movie.watchProviders.size() == 0 ? View.GONE : View.VISIBLE}"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/rv_similar" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/provider_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:clipToPadding="false"
                    android:nestedScrollingEnabled="false"
                    android:orientation="horizontal"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:visibility="@{movie.watchProviders.size() == 0 ? View.GONE : View.VISIBLE}"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/provider_label"
                    app:watchProviderData="@{movie.watchProviders}" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </RelativeLayout>
</layout>